# unreal-source-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-03-01-six-critical-fixes.md  2026-03-01-unreal-source-mcp-implementation.md  2026-03-02-mcp-improvements-plan.md  2026-03-02-mcp-server-improvements.md
src/unreal_source_mcp/: __init__.py  __main__.py  config.py  server.py
src/unreal_source_mcp/db/: queries.py  schema.py
src/unreal_source_mcp/indexer/: cpp_parser.py  pipeline.py  reference_builder.py  shader_parser.py
tests/: test_config.py  test_cpp_parser.py  test_db.py  test_e2e.py  test_pipeline.py  test_reference_builder.py  test_server.py  test_shader_parser.py
tests/fixtures/sample_ue_source/: ErrorNodeClass.h  ForwardDecl.h  SampleActor.cpp  SampleActor.h  SampleShader.usf
